styles.css
.qv-object-tableWithGrowth div.qv-object-content-container {
    height: 100%;
    width: 100%;
}

.qv-object-tableWithGrowth table {
    width: 100%;
    table-layout: fixed;
}

.qv-object-tableWithGrowth .tbl-header {
    border-radius: 5px 5px 0 0;
}

.qv-object-tableWithGrowth .tbl-content {
    overflow-x:scroll;
    margin-top: 0px;
    border: 1px solid rgb(220, 220, 220);
    border-radius: 0 0 5px 5px;
}

.qv-object-tableWithGrowth th {
    padding: 10px 5px;
    text-align: left;
    font-weight: 500;
    font-size: 12px;
    text-transform: uppercase;
}

.qv-object-tableWithGrowth td {
    padding: 5px;
    text-align: left;
    vertical-align: middle;
    font-weight: 300;
    font-size: 12px;
    border-bottom: solid 1px rgb(220, 220, 220);
}

.qv-object-tableWithGrowth .tbl-wrapper {
    padding:10px;
    height:calc(100% - 10px * 2);
}
.qv-object-tableWithGrowth section {
    height: 100%;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
}

.qv-object-tableWithGrowth .right-align {
    text-align: right;
}

.qv-object-tableWithGrowth .left-align {
    text-align: left;
}

.qv-object-tableWithGrowth .arrow {
    width:16px;
}

.qv-object-tableWithGrowth .arrow img {
    width:14px;
    height:14px;
    display:block;
    margin:auto;
}

